# QuadrantTG

./: .gitignore  App.tsx  BACKUP_MIGRATION_POLICY.md  INCIDENT_RESPONSE.md  LOAD_SECURITY_TEST_PLAN.md  LOGGING_MONITORING.md  README.md  SECRET_MANAGEMENT.md  SECURITY_DATA_PROTECTION.md  app.config.js  metro.config.js  notion_book_pages.json  package-lock.json  package.json  start-expo.sh  tsconfig.json
android/: settings.gradle
android/app/: build.gradle
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 202405270001_add_app_usage_to_users.py  7a3936cc781c_create_user_table.py  f8c2eab13b5f_add_content_models.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/routes/: auth.py  content.py  health.py  users.py
backend/app/core/: config.py  db.py  rate_limiter.py  redis.py  security.py  telegram.py
backend/app/integrations/: __init__.py
backend/app/middleware/: __init__.py  body_limit.py  global_rate_limit.py
backend/app/models/: __init__.py  content.py  user.py
backend/app/repositories/: user.py
backend/app/schemas/: auth.py  content.py  user.py
backend/app/services/: content.py  user.py
backend/app/tasks/: __init__.py
bot/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
bot/src/: bot.ts  env.ts  externalClient.ts  jobRateLimiter.ts  logger.ts  network.ts  queue.ts  redis.ts  server.ts  worker.ts
bot/tests/: setupEnv.ts
ios/: Podfile
miniapp/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+82 files in other folders)
